# tangled-adjudicate

./: LICENSE  README.md  adjudicate_all_terminal_states.py  adjudicate_states.py  how_to_adjudicate_states.py  pyproject.toml  setup.py
adjudicators/: adjudicate.py
schrodinger/: schrodinger_functions.py
tangled_adjudicate/: adjudicate_all_terminal_states.py  how_to_adjudicate_states.py  temp.py
tangled_adjudicate/adjudicators/: adjudicate.py
tangled_adjudicate/schrodinger/: new_schedule.txt  schrodinger_functions.py  sparse_matrices.py
tangled_adjudicate/utils/: adjudicate_all_terminal_states.py  compare_adjudication_results.py  find_graph_automorphisms.py  find_hardware_embeddings.py  game_graph_properties.py  generate_terminal_states.py  how_to_adjudicate_states.py  parameters.py  utilities.py
utils/: compare_adjudication_results.py  find_game_graph_automorphisms.py  find_graph_automorphisms.py  find_hardware_embeddings.py  generate_terminal_states.py  modified_srt.py  parameters.py
