[tool.poetry]
name = "tangled-adjudicate"
version = "0.1.0"
description = "Tangled Adjudicators"
authors = ["Geordie Rose <greatblueheron@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dwave-ocean-sdk = "6.0.1"
matplotlib = "3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
